wav_generation/NoNoise/five-two.log
Traceback (most recent call last):
  File "main.py", line 2, in <module>
    from genACECorpusDataset import genACECorpusDataset
  File "/data1/zdm/code/T60_data_generation/wav_generation/NoNoise/genACECorpusDataset.py", line 96
    resultsFileName = os.path.join(micConfigCorpusFolder,"results.csv"))
                                                                       ^
SyntaxError: unmatched ')'
